# nebulous.py

./: .gitignore  README.md  pyproject.toml  sample_packet.json
src/nebulous/game/: __init__.py  constants.py  enums.py  exceptions.py  natives.py  packets.py
src/nebulous/game/account/: __init__.py
src/nebulous/game/models/: __init__.py  apiobjects.py  client.py  gameevents.py  gameobjects.py  netobjects.py
tests/: test_account.py  test_connect.py
utils/: endpoint_tester.py  javaenum2py.py  resourcearray2enum.py
